--- a/src/Smartstore.Modules/Smartstore.WebApi/Views/WebApiAdmin/Configure.cshtml
+++ b/src/Smartstore.Modules/Smartstore.WebApi/Views/WebApiAdmin/Configure.cshtml
@@ -147,52 +147,73 @@
             var ask = @T("Admin.Common.AskToProceed").JsValue;
             var createKeys = btn.hasClass('create-keys');
             var showKeys = btn.hasClass('show-keys');
+            var customerId = btn.data('key');
 
             $({}).ajax({
                 cache: false,
                 type: 'POST',
                 url: btn.data('url'),
-                data: { "customerId": btn.data('key') },
+                data: { "customerId": customerId },
                 ask: createKeys || btn.hasClass('delete-keys') ? ask : null,
                 success: function (response) {
-                    if (!showKeys) {
-                        const grid = $('#apiuser-grid').parent().data('datagrid');
-                        grid.read();
-                    }
-
                     if (createKeys || showKeys) {
                         var dialog = $('#webapi-keys-dialog');
                         dialog.find('.modal-body').first().html(response);
+
+                        initClipboardButtons();
                         dialog.modal('show');
+                    }
+
+                    @*if (createKeys) {
+                        var gridRow = $('#apiuser-grid').find('tr[data-key=' + customerId + ']').first();
+                        var userInfo = gridRow.find('.apiuser-info');
+                        var elPublicKey = $('#webapi-copy-publickey');
+                        var enabled = elPublicKey.closest('.adminContent').data('enabled');
+                        var yes = T("Admin.Common.Yes").JsValue;
+                        var no = T("Admin.Common.No").JsValue;
+
+                        userInfo.find('.apiuser-publickey').text(elPublicKey.data('apikey'));
+                        userInfo.find('.apiuser-secretkey').text($('#webapi-copy-secretkey').data('apikey'));
+                        userInfo.find('.apiuser-enabled').text(enabled ? yes : no);
+                        userInfo.find('.apiuser-lastrequest').text('-');
+
+                        gridRow.removeClass('text-muted');
+                        userInfo.show();
+                    } else*@
+                    if (!showKeys) {
+                        const grid = $('#apiuser-grid').parent().data('datagrid');
+                        grid.read();
                     }
                 }
             });
         });
 
-        $('#webapi-copy-keys').tooltip({
-			placement: 'top',
-			trigger: 'hover',
-			title: @T("Common.CopyToClipboard").JsValue
-		}).on('click', function (e) {
-            e.preventDefault();
-            var btn = $(this);
-            var keys = $('#webapi-keys-string').text();
-            var succeeded = false;
+        function initClipboardButtons() {
+            $('#webapi-copy-publickey, #webapi-copy-secretkey').tooltip({
+                placement: 'bottom',
+                trigger: 'hover',
+                title: @T("Common.CopyToClipboard").JsValue
+		    }).on('click', function (e) {
+                e.preventDefault();
+                var btn = $(this);
+                var key = btn.data('apikey');
+                var succeeded = false;
 
-            if (!_.isEmpty(keys)) {
-                succeeded = window.copyTextToClipboard(keys);
-                btn.find("textarea").remove();
-            }
+                if (!_.isEmpty(key)) {
+                    succeeded = window.copyTextToClipboard(key);
+                    btn.find('textarea').remove();
+                }
 
-			btn.attr('data-original-title', succeeded ? @T("Common.CopyToClipboard.Succeeded").JsValue : @T("Common.CopyToClipboard.Failed").JsValue)
-				.tooltip('show');
+			    btn.attr('data-original-title', succeeded ? @T("Common.CopyToClipboard.Succeeded").JsValue : @T("Common.CopyToClipboard.Failed").JsValue)
+				    .tooltip('show');
 
-			setTimeout(function () {
-                btn.attr('data-original-title', @T("Common.CopyToClipboard").JsValue).tooltip('hide');
-            }, 2000);
+			    setTimeout(function () {
+                    btn.attr('data-original-title', @T("Common.CopyToClipboard").JsValue).tooltip('hide');
+                }, 2000);
 
-            return false;
-		});
+                return false;
+		    });
+        }
 
     });
 </script>
