--- a/src/Smartstore.Web/Areas/Admin/Views/Export/List.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Export/List.cshtml
@@ -35,7 +35,7 @@
     <modal-header sm-title="@T("Admin.DataExchange.Export.ExportFiles")"></modal-header>
     <modal-body></modal-body>
     <modal-footer>
-        <button class="btn btn-secondary btn-flat" data-dismiss="modal"><span>@T("Common.Cancel")</span></button>
+        <button class="btn btn-secondary btn-flat" data-dismiss="modal"><span>@T("Common.Close")</span></button>
     </modal-footer>
 </modal>
 
