More work on clipboard stuff

--- a/src/Smartstore.Modules/Smartstore.WebApi/Views/WebApiAdmin/_ApiKeysPopup.cshtml
+++ b/src/Smartstore.Modules/Smartstore.WebApi/Views/WebApiAdmin/_ApiKeysPopup.cshtml
@@ -12,8 +12,8 @@
                 <label asp-for="PublicKey" class="mb-0"></label>
                 <div class="hstack gap-1">
                     <span id="webapi-publickey">@Model.PublicKey</span>
-                    <button id="webapi-copy-publickey" type="button" class="btn btn-clipboard btn-sm btn-icon btn-flat btn-light" data-copy-from="#webapi-publickey" data-copy="@Model.PublicKey">
-                        <bootstrap-icon name="clipboard"></bootstrap-icon>
+                    <button id="webapi-copy-publickey" type="button" class="btn btn-clipboard btn-sm btn-icon btn-flat btn-light" data-copy="@Model.PublicKey">
+                        <bootstrap-icon name="clipboard" />
                     </button>
                 </div>
             </div>
@@ -22,7 +22,7 @@
                 <div class="hstack gap-1">
                     <span id="webapi-secretkey">@Model.SecretKey</span>
                     <button id="webapi-copy-secretkey" type="button" class="btn btn-clipboard btn-sm btn-icon btn-flat btn-light" data-copy="@Model.SecretKey">
-                        <bootstrap-icon name="clipboard"></bootstrap-icon>
+                        <bootstrap-icon name="clipboard" />
                     </button>
                 </div>
             </div>
