--- a/src/Smartstore.Web/wwwroot/shared/_offcanvas.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_offcanvas.scss
@@ -191,7 +191,9 @@ body.canvas-blocking .canvas-blocker {
 .offcanvas-content {
     position: absolute;
     width: 100%;
-    height: 100%;
+    // We place two height values here to support all browsers. Some browsers don't support 100dvh yet.
+    height: 100vh;
+    height: 100dvh;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
 }
