--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_layout.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_layout.scss
@@ -72,7 +72,7 @@ body {
     position: relative;
     z-index: 1;
     background: $body-bg;
-    box-shadow: 0 0 24px rgba(#000, 0.2);
+    box-shadow: 0 0 24px rgba($black, 0.2);
     min-height: 100vh;
 }
 
