--- a/src/Smartstore.Web/Areas/Admin/Views/ProductAttribute/_Grid.ProductAttributeOptionsSets.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/ProductAttribute/_Grid.ProductAttributeOptionsSets.cshtml
@@ -71,7 +71,7 @@
                 <template v-slot:display-name="item">
                     <i :class='item.row.TypeNameClass' :title='item.row.TypeName'></i>
                     <span class="color-container" v-if="item.row.HasColor"><span class='color' :style='{ background: item.row.Color }' :title='item.row.Color'>&nbsp;</span></span>
-                    <span>{{ item.value }} {{ item.row.QuantityInfo }}</span>
+                    <a href="#" class="text-truncate edit-attribute-option" :data-key="item.row.Id" :data-setid="item.row.ProductAttributeOptionsSetId">{{ item.value }} {{ item.row.QuantityInfo }}</a>
                 </template>
                 <template v-slot:display-linkedproductname="item">
 	                <span class='mr-1 badge' :class="'badge-' + item.row.LinkedProductTypeLabelHint">{{ item.row.LinkedProductTypeName }}</span>
