--- a/src/Smartstore.Web/Areas/Admin/Views/Product/Grids/_Grid.AttributeValues.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/Grids/_Grid.AttributeValues.cshtml
@@ -4,7 +4,7 @@
     var parentModel = ViewData["Parent"] as ProductModel.ProductVariantAttributeValueListModel;
 }
 
-<datagrid id="product-attribute-values-grid" 
+<datagrid id="product-attribute-values-grid" class="h-100"
           allow-resize="true" 
           allow-row-selection="true"
           allow-column-reordering="true">
