--- a/src/Smartstore.Web/Areas/Admin/Views/Product/Grids/_Grid.ProductVariantAttribute.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/Grids/_Grid.ProductVariantAttribute.cshtml
@@ -60,7 +60,7 @@
         <column for="EditUrl" width="1fr" sortable="false">
             <display-template>
                 <a :href="item.row.EditUrl">
-                    {{ item.row.EditText }}
+                    {{ item.row.EditLinkText }}
                 </a>
             </display-template>
             <edit-template>
