--- a/src/Smartstore.Web/wwwroot/admin/_admin.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_admin.scss
@@ -237,7 +237,7 @@ body {
             vertical-align: top;
         }
 
-        a:not(.btn) {
+        a:not(.btn):not(.dropdown-item) {
             text-decoration: none;
             font-family: $font-family-sans-serif;
             font-size: 12px;
@@ -252,7 +252,6 @@ body {
         width: auto;
         max-width: none; // Reset earlier grid tiers
         padding-inline: 5px 0;
-
         display: flex;
         align-items: center;
         gap: 0.4rem;
