--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_ProductVariantAttributeRules.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_ProductVariantAttributeRules.cshtml
@@ -1,11 +1,9 @@
-﻿@using Smartstore.Core.Rules
-
-@model ProductModel.ProductVariantAttributeValueListModel
+﻿@model ProductModel.ProductVariantAttributeValueListModel
 
 @{
     Assets.AppendScriptFiles("~/admin/js/smartstore.rules.js");
-
-    var scope = (int)RuleScope.ProductAttribute;
+    
+    var scope = (int)Model.RuleSet.Scope;
 }
 
 <div id="ruleset-root" class="ruleset-root"
@@ -13,8 +11,9 @@
      data-scope="@scope"
      data-url-addgroup="@Url.Action("AddGroup", "Rule", new { area = "Admin" })"
      data-url-deletegroup="@Url.Action("DeleteGroup", "Rule", new { area = "Admin" })"
-     data-url-updaterules="@Url.Action("UpdateRules", "Rule", new { ruleScope = scope, area = "Admin" })"
+     data-url-updaterules="@Url.Action("UpdateRules", "Rule", new { area = "Admin" })"
      data-url-addrule="@Url.Action("AddRule", "Rule", new { area = "Admin" })"
-     data-url-deleterule="@Url.Action("DeleteRule", "Rule", new { area = "Admin" })">
-    @*<partial name="~/Areas/Admin/Views/Rule/_RuleSet.cshtml" model="Model.ExpressionGroup" />*@
+     data-url-deleterule="@Url.Action("DeleteRule", "Rule", new { area = "Admin" })"
+     data-url-changeoperator="@Url.Action("ChangeOperator", "Rule", new { area = "Admin" })">
+    <partial name="~/Areas/Admin/Views/Rule/_RuleSet.cshtml" model="Model.RuleSet.ExpressionGroup" />
 </div>
