--- a/src/Smartstore.Web/Areas/Admin/Views/Rule/_RuleSet.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Rule/_RuleSet.cshtml
@@ -1,14 +1,21 @@
 ﻿@model IRuleExpressionGroup
 
 @{
-    var orButton = ViewBag.ConditionsOrButton as string;
-    var andButton = ViewBag.ConditionsAndButton as string;
+    var orButton = await GetConditionsButtonString(LogicalRuleOperator.Or);
+    var andButton = await GetConditionsButtonString(LogicalRuleOperator.And);
     var ruleDescriptors = await Model.Provider.GetRuleDescriptorsAsync();
+
+    async Task<string> GetConditionsButtonString(LogicalRuleOperator op)
+    {
+        // INFO: "cshtml" extension is mandatory here, as this partial is invoked with a complete path in case of RuleScope.ProductAttribute.
+        var content = await Html.PartialAsync("_RuleSetConditionsButton.cshtml", Model, new ViewDataDictionary(ViewData) { ["ruleOperator"] = op });
+        return content.ToHtmlString().ToString();
+    }
 }
 
 <div class="ruleset" data-ruleset-id="@Model.Id" data-refrule-id="@Model.RefRuleId">
     <div class="ruleset-header hstack justify-content-between">
-        <div class="ruleset-operator" data-url="@Url.Action("ChangeOperator")">
+        <div class="ruleset-operator">
             <input type="hidden" asp-for="LogicalOperator" />
             <div class="ruleset-op-one align-items-center justify-content-stretch @(Model.LogicalOperator == LogicalRuleOperator.And ? "hide" : "d-flex")">
                 @Html.Raw(T("Admin.Rules.OneCondition", orButton))
