--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_ProductVariantAttributeRules.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_ProductVariantAttributeRules.cshtml
@@ -9,6 +9,7 @@
 <div id="ruleset-root" class="ruleset-root"
      data-dirty="false"
      data-scope="@scope"
+     data-related-id="@Model.ProductVariantAttributeId"
      data-url-addgroup="@Url.Action("AddGroup", "Rule", new { area = "Admin" })"
      data-url-deletegroup="@Url.Action("DeleteGroup", "Rule", new { area = "Admin" })"
      data-url-updaterules="@Url.Action("UpdateRules", "Rule", new { area = "Admin" })"
