--- a/src/Smartstore.Web/Areas/Admin/Views/Rule/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Rule/_CreateOrUpdate.cshtml
@@ -134,7 +134,8 @@
 
     <div id="ruleset-root" class="ruleset-root" 
          data-dirty="false"
-         data-scope="@((int)Model.Scope)" 
+         data-scope="@((int)Model.Scope)"
+         data-related-id="0"
          data-url-addgroup="@Url.Action("AddGroup")" 
          data-url-deletegroup="@Url.Action("DeleteGroup")"
          data-url-updaterules="@Url.Action("UpdateRules")"
